@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.38 [20131219] [svn: r540]
+Changelog for sg3_utils-1.38 [20140105] [svn: r541]
   - sg_ses: add --dev-slot-num= and --sas-addr=
     - error and warning message cleanup
     - add --maxlen= option
@@ -15,6 +15,7 @@ Changelog for sg3_utils-1.38 [20131219] [svn: r540]
   - sg_xcopy: environment variables: XCOPY_TO_SRC and
     XCOPY_TO_DST indicate where xcopy command is sent
     - change default to send xcopy to dst (was src)
+    - improve CL handling of short options (e.g. '-vv')
   - sg_luns: guard against garbage response
   - sg_write_same: repeat if unit attention
   - sg_rtpg: fix indexing bug with --extended option
